# scalable-stellar-inference

./: .gitmodules  MANIFEST.in  README.md  pyproject.toml
notebook/: bolometric-corrections-emulator.ipynb  bolometric-corrections.ipynb  emulator-error.ipynb  hierarchical-model-analysis.ipynb  multi-star-spec.ipynb  multivariate-likelihood-tinkering.ipynb  single-star-model.ipynb  single-star-phot.ipynb  single-star-seis.ipynb  single-star-spec.ipynb  synthetic-test-stars.ipynb
scripts/: clean_nearest_neighbour_truths.py  model_star.py  nearest_neighbour_truths.py  observations.py  sample_truths.py
src/celestify/: __init__.py  bolometric_corrections.py  emulator.py  numpyro_models.py  star.py
src/celestify/_jax/: bolometric_corrections.py  emulator.py  star.py
src/celestify/_numpy/: emulator.py
src/celestify/_pytensor/: emulator.py
src/celestify/_tensorflow/: emulator.py
src/celestify/data/: bc_weights.h5  emulator_error.json  emulator_weights.h5
tests/: test_bolometric_corrections.py  test_emulator.py  test_numpyro_models.py  test_star.py
