[build-system]
requires = ["setuptools"]  # the build tool to use
build-backend = "setuptools.build_meta"  # the function to use to build the package

[project]
name = "celestify"
version = "0.0.1"
dependencies = ["numpy", "scipy", "pandas", "jaxlib", "jax", "numpyro", "h5py"]
requires-python = ">=3.9"

[project.optional-dependencies]
scripts = ["matplotlib", "arviz", "corner"]
